[gd_scene load_steps=2 format=3 uid="uid://b8n4j6k2p5q9m"]

[ext_resource type="Script" path="res://scripts/systems/Dialogue.gd" id="1_m3k7n"]

[node name="DialogueSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_m3k7n")

[node name="DialoguePanel" type="Panel" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Speaker Name"
horizontal_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue text appears here..."
fit_content = true

[node name="SourceTag" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "[source_id]"
horizontal_alignment = 2

[node name="ContinueLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Press SPACE to continue"
horizontal_alignment = 1